--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
         </article>
     </main>
     <footer>
-        <p>Site criado por <a href="https://gustavoguanabara.github.io/">Gustavo Guanabara</a> para o <a href="https://www.youtube.com/c/CursoemV%C3%ADdeo">CursoemVideo</a></p>
+        <p>Site criado por <a href="https://gustavoguanabara.github.io/">Daniel Henrique</a> para o <a href="https://www.youtube.com/c/CursoemV%C3%ADdeo">CursoemVideo</a></p>
     </footer>
 </body>
 </html>
